--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,7 +11,7 @@
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: 1px solid var(--color-grey-light-4);
+  border-bottom: var(--border-bottom);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -31,5 +31,30 @@
 
 .hotel-view {
   flex: 1;
-  height: 80rem;
+}
+
+.detail {
+  display: flex;
+  justify-content: space-around;
+  padding: 4.5rem;
+  // background-color: var(--color-grey-light-1);
+  border-bottom: var(--border-bottom);
+  // gap: 4.5rem;
+  font-size: 1.4rem;
+}
+
+.description {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  flex: 0 0 60%;
+  margin-right: 4.5rem;
+}
+
+.user-reviews {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
