--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -374,6 +374,27 @@ body {
     outline: none;
     animation: plusate 1s infinite; }
 
+.btn-inline-2 {
+  cursor: pointer;
+  border: none;
+  color: #fff;
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  text-decoration: none;
+  display: inline-block;
+  background-color: transparent;
+  transition: all 0.2s; }
+  .btn-inline-2 span {
+    margin-left: 3px;
+    transition: margin-left 0.2s; }
+  .btn-inline-2:hover {
+    color: var(--color-primary); }
+    .btn-inline-2:hover span {
+      margin-left: 8px; }
+  .btn-inline-2:focus {
+    outline: none;
+    animation: plusate 1s infinite; }
+
 @keyframes plusate {
   0% {
     transform: scale(1);
