--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -365,6 +365,36 @@
   }
 }
 
+.btn-inline-2 {
+  cursor: pointer;
+  border: none;
+  color: #fff;
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  text-decoration: none;
+  display: inline-block;
+  background-color: transparent;
+  transition: all 0.2s;
+
+  & span {
+    margin-left: 3px;
+    transition: margin-left 0.2s;
+  }
+
+  &:hover {
+    color: var(--color-primary);
+
+    span {
+      margin-left: 8px;
+    }
+  }
+
+  &:focus {
+    outline: none;
+    animation: plusate 1s infinite;
+  }
+}
+
 @keyframes plusate {
   0% {
     transform: scale(1);
